--- a/.github/workflows/welcome.yml
+++ b/.github/workflows/welcome.yml
@@ -12,4 +12,5 @@ jobs:
         uses: actions/first-interaction@v1
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
+          issue-message: 'Welcome to the repository! Feel free to open an issue if you face any problem.'
           pr-message: '🎉 Thanks for opening your first pull request! We appreciate your contribution.'
